--- a/Web.config
+++ b/Web.config
@@ -45,7 +45,14 @@
     <add key="LoginCustomViewPath" value="~/Views/Shared/Login.cshtml" />
     <add key="SMSAPIKEY" value="Fv0TDZDvG30-0uUyLId8rjRCkDp3pCpb0q6ILUOZGw" />
     <add key="UsersTableIsDataset" value="false" />
-    <add key="BaseLibraryPath" value="..\..\..\..\Libraries\Intrinsiq.Reporting\Intrinsiq.Reporting.csproj,..\..\..\..\BaseLib\Intrinsiq.WordDocument\Intrinsiq.WordDocument.csproj,..\..\..\..\BaseLib\Intrinsiq.Query\Intrinsiq.Query.csproj,..\..\..\..\BaseLib\Intrinsiq.Email\Intrinsiq.Email.csproj,..\..\..\..\BaseLib\Intrinsiq.Alerts\Intrinsiq.Alerts.csproj,FTL.UserAuthentication\FTL.UserAuthentication.csproj,..\..\..\..\BaseLib\Intrinsiq.SMS\Intrinsiq.SMS.csproj" />
+    <add key="BaseLibraryPath" value="
+         ..\..\..\..\BaseLib\Intrinsiq.Reporting\Intrinsiq.Reporting.csproj,
+         ..\..\..\..\BaseLib\Intrinsiq.WordDocument\Intrinsiq.WordDocument.csproj,
+         ..\..\..\..\BaseLib\Intrinsiq.Query\Intrinsiq.Query.csproj,
+         ..\..\..\..\BaseLib\Intrinsiq.Email\Intrinsiq.Email.csproj,
+         ..\..\..\..\BaseLib\Intrinsiq.Alerts\Intrinsiq.Alerts.csproj,
+         ..\..\..\FTL.UserAuthentication\FTL.UserAuthentication.csproj,
+         ..\..\..\..\BaseLib\Intrinsiq.SMS\Intrinsiq.SMS.csproj" />
   </appSettings>
   <system.web>
 
